# tvshow-performance

./: README.md  TV show data analysis.ipynb  analysis.py  to_scrape.md  tv_show_analysis.ipynb  tvshow_functions.py
data/: season1.csv  season2.csv  summary.csv
data/FoodNetworkStar/: outcomes10.csv  outcomes11.csv  outcomes12.csv  outcomes13.csv  outcomes14.csv  outcomes4.csv  outcomes5.csv  outcomes6.csv  outcomes7.csv  outcomes8.csv  outcomes9.csv  season10.csv  season11.csv  season12.csv  season13.csv  season14.csv  season4.csv  season5.csv  season6.csv  season7.csv  season8.csv  season9.csv
data/Great British Bake Off/: season1.csv  season2.csv  season3.csv  season4.csv  season5.csv  season6.csv  season7.csv  season8.csv
data/HellsKitchen/: outcomes1.csv  outcomes10.csv  outcomes11.csv  outcomes12.csv  outcomes13.csv  outcomes14.csv  outcomes15.csv  outcomes16.csv  outcomes17.csv  outcomes2.csv  outcomes3.csv  outcomes4.csv  outcomes5.csv  outcomes6.csv  outcomes7.csv  outcomes8.csv  outcomes9.csv  participants1.csv  participants10.csv  participants11.csv  participants12.csv  participants13.csv  participants14.csv  participants15.csv  participants16.csv  participants17.csv  participants2.csv  participants3.csv  participants4.csv  participants5.csv  participants6.csv  participants7.csv  participants8.csv  participants9.csv  season1.csv  season10.csv  season11.csv  season12.csv  season13.csv  season14.csv  (+11 more)
data/MasterChef/: outcomes1.csv  outcomes2.csv  outcomes3.csv  outcomes4.csv  outcomes5.csv  outcomes6.csv  outcomes7.csv  outcomes8.csv  participants1.csv  participants2.csv  participants3.csv  participants4.csv  participants5.csv  participants6.csv  participants7.csv  participants8.csv  season1.csv  season2.csv  season3.csv  season4.csv  season5.csv  season6.csv  season7.csv  season8.csv
data/RuPaul/: outcomes1.csv  outcomes10.csv  outcomes2.csv  outcomes3.csv  outcomes4.csv  outcomes5.csv  outcomes6.csv  outcomes7.csv  outcomes8.csv  participants1.csv  participants10.csv  participants2.csv  participants3.csv  participants4.csv  participants5.csv  participants6.csv  participants7.csv  participants8.csv  participants9.csv  season1.csv  season10.csv  season2.csv  season3.csv  season4.csv  season5.csv  season6.csv  season7.csv  season8.csv  season9.csv
data/TopChef/: outcomes1.csv  outcomes10.csv  outcomes11.csv  outcomes12.csv  outcomes13.csv  outcomes14.csv  outcomes15.csv  outcomes2.csv  outcomes3.csv  outcomes4.csv  outcomes5.csv  outcomes6.csv  outcomes7.csv  outcomes8.csv  outcomes9.csv  participants1.csv  participants10.csv  participants11.csv  participants12.csv  participants13.csv  participants14.csv  participants15.csv  participants2.csv  participants3.csv  participants4.csv  participants5.csv  participants6.csv  participants7.csv  participants8.csv  participants9.csv  season1.csv  season10.csv  season11.csv  season12.csv  season13.csv  season14.csv  season15.csv  season2.csv  season3.csv  season4.csv  (+5 more)
scrape/: scrapeCooking.cabal  stack.yaml  tvData.cabal
scrape/src/: Common.hs  HellsKitchen.hs  Lib.hs  Scrapers.hs  ShowScrapers.hs  TopChef.hs
scrape/test/: Spec.hs
