name:                scrapeCooking
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Chris Goldammer
maintainer:          goldammer.christian@gmail.com
copyright:           2018 Chris Goldammer
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Scrapers
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , monadplus
                     , bytestring
                     , text
                     , lens
                     , http-client
                     , taggy
                     , taggy-lens
                     , wreq
                     , blaze-markup
                     , blaze-html
                     , unordered-containers
                     , containers
                     , mtl
                     , random
                     , validation
                     , curl
  default-language:    Haskell2010

executable scrape-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scrapeCooking
  default-language:    Haskell2010

test-suite scrape-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scrapeCooking
                     , blaze-markup
                     , blaze-html
                     , text
                     , HUnit
                     , bytestring
                     , lens
                     , taggy
                     , taggy-lens
                    
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

